--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+.bg-show{
+width: 100%;
+height: 400px;
+background-image: url("https://images.unsplash.com/photo-1498450067505-1e6cec4224fc?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzZ8fHBob3RvcyUyMGZsYXRzJTIwZ3JhdHVpdHxlbnwwfHwwfHx8MA%3D%3D");
+background-size: contain;
+
+}
